--- a/src/ft/mod/mfg/form/DFormFormula.form
+++ b/src/ft/mod/mfg/form/DFormFormula.form
@@ -239,7 +239,7 @@
                 </Component>
                 <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompQuantity">
                 </Component>
-                <Component class="sba.lib.gui.bean.DBeanFieldBoolean" name="moBoolQuantityVariable1">
+                <Component class="sba.lib.gui.bean.DBeanFieldBoolean" name="moBoolQuantityByVar1">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Cantidad por Variable 1"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -256,7 +256,7 @@
                 <Property name="verticalGap" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jlDefaultVariable1">
+                <Component class="javax.swing.JLabel" name="jlDefaultVar1">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Variable 1 default:"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -264,7 +264,7 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompDefaultVariable1">
+                <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompDefaultVar1">
                 </Component>
               </SubComponents>
             </Container>
@@ -324,7 +324,7 @@
                         </Property>
                       </Properties>
                     </Component>
-                    <Component class="sba.lib.gui.bean.DBeanFieldBoolean" name="moBoolCompConsVariable1">
+                    <Component class="sba.lib.gui.bean.DBeanFieldBoolean" name="moBoolCompConsByVar1">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Consumo por Variable 1"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
