--- a/src/ft/mod/mfg/form/DFormJob.form
+++ b/src/ft/mod/mfg/form/DFormJob.form
@@ -438,7 +438,7 @@
                             </Component>
                             <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompProgPrepQuantity">
                             </Component>
-                            <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompProgPrepDefaultVariable1">
+                            <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompProgPrepDefaultVar1">
                               <Properties>
                                 <Property name="toolTipText" type="java.lang.String" value="Variable 1 default"/>
                               </Properties>
@@ -815,7 +815,7 @@
                             </Component>
                             <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompPrepConsQuantity">
                             </Component>
-                            <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompPrepConsVariable1">
+                            <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompPrepConsVar1">
                               <Properties>
                                 <Property name="toolTipText" type="java.lang.String" value="Variable 1"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -986,7 +986,7 @@
                             </Component>
                             <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompPrepMfgQuantity">
                             </Component>
-                            <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompPrepMfgVariable1">
+                            <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompPrepMfgVar1">
                               <Properties>
                                 <Property name="toolTipText" type="java.lang.String" value="Variable 1"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -1435,6 +1435,17 @@
                   </SubComponents>
                 </Container>
               </SubComponents>
+            </Container>
+            <Container class="javax.swing.JPanel" name="jPanel2">
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
+                  <JTabbedPaneConstraints tabName="Calidad">
+                    <Property name="tabTitle" type="java.lang.String" value="Calidad"/>
+                  </JTabbedPaneConstraints>
+                </Constraint>
+              </Constraints>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
             </Container>
             <Container class="javax.swing.JPanel" name="jpStat">
               <Constraints>
