--- a/src/ft/mod/mfg/form/DFormJob.form
+++ b/src/ft/mod/mfg/form/DFormJob.form
@@ -51,7 +51,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
                 <Property name="columns" type="int" value="1"/>
-                <Property name="rows" type="int" value="4"/>
+                <Property name="rows" type="int" value="5"/>
                 <Property name="verticalGap" type="int" value="5"/>
               </Layout>
               <SubComponents>
@@ -127,7 +127,31 @@
                     <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyJobItemFamily">
                       <Properties>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                          <Dimension value="[325, 23]"/>
+                          <Dimension value="[350, 23]"/>
+                        </Property>
+                      </Properties>
+                    </Component>
+                  </SubComponents>
+                </Container>
+                <Container class="javax.swing.JPanel" name="jPanel22">
+
+                  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout">
+                    <Property name="alignment" type="int" value="0"/>
+                    <Property name="verticalGap" type="int" value="0"/>
+                  </Layout>
+                  <SubComponents>
+                    <Component class="javax.swing.JLabel" name="jlJobItemGroup">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Grupo producto:*"/>
+                        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                          <Dimension value="[100, 23]"/>
+                        </Property>
+                      </Properties>
+                    </Component>
+                    <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyJobItemGroup">
+                      <Properties>
+                        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                          <Dimension value="[350, 23]"/>
                         </Property>
                       </Properties>
                     </Component>
@@ -151,7 +175,7 @@
                     <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyJobItem">
                       <Properties>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                          <Dimension value="[325, 23]"/>
+                          <Dimension value="[350, 23]"/>
                         </Property>
                       </Properties>
                     </Component>
@@ -163,7 +187,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
                 <Property name="columns" type="int" value="1"/>
-                <Property name="rows" type="int" value="4"/>
+                <Property name="rows" type="int" value="5"/>
                 <Property name="verticalGap" type="int" value="5"/>
               </Layout>
               <SubComponents>
@@ -348,7 +372,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyProgPrepLinePrep">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[325, 23]"/>
+                                  <Dimension value="[350, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -372,7 +396,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyProgPrepLinePrepItem">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[325, 23]"/>
+                                  <Dimension value="[350, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -396,7 +420,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyProgPrepFormula">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[325, 23]"/>
+                                  <Dimension value="[350, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -526,7 +550,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyProgPackLinePack">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[325, 23]"/>
+                                  <Dimension value="[350, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -550,7 +574,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyProgPackLinePackItem">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[325, 23]"/>
+                                  <Dimension value="[350, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -574,7 +598,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyProgPackFormula">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[325, 23]"/>
+                                  <Dimension value="[350, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
