--- a/src/ft/gui/DGuiClientApp.form
+++ b/src/ft/gui/DGuiClientApp.form
@@ -55,88 +55,139 @@
             <Property name="text" type="java.lang.String" value="Configuraci&#xf3;n"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemPf">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgLine">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Productos terminados"/>
+                <Property name="text" type="java.lang.String" value="L&#xed;neas de producci&#xf3;n"/>
               </Properties>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemPb">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgDepart">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Productos base"/>
+                <Property name="text" type="java.lang.String" value="Departamentos de producci&#xf3;n"/>
               </Properties>
             </MenuItem>
-            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCfg1">
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCfg">
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemRmi">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgWarehouse">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Materiales directos insumo"/>
+                <Property name="text" type="java.lang.String" value="Almacenes"/>
               </Properties>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemRmp">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgCompany">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Materiales directos empaque"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemMi">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Materiales indirectos"/>
-                <Property name="enabled" type="boolean" value="false"/>
+                <Property name="text" type="java.lang.String" value="Empresa"/>
               </Properties>
             </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCfg2">
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemEm">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgYear">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Gastos producci&#xf3;n"/>
-                <Property name="enabled" type="boolean" value="false"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemEo">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Gastos operaci&#xf3;n"/>
-                <Property name="enabled" type="boolean" value="false"/>
+                <Property name="text" type="java.lang.String" value="A&#xf1;os"/>
               </Properties>
             </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCfg3">
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItem">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="&#xcd;tems"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemGroup">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Grupos &#xed;tems"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgItemFamily">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Familias &#xed;tems"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCfg4">
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgUnit">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Unidades"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgPresent">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Presentaciones"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCfg5">
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiCfgUser">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Usuarios"/>
               </Properties>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgUserModule">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Accesos de usuarios"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCfg4">
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiCfgConfig">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Configuraci&#xf3;n"/>
-                <Property name="enabled" type="boolean" value="false"/>
+                <Property name="text" type="java.lang.String" value="Configuraci&#xf3;n del sistema"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="jmCat">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Cat&#xe1;logos"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemPf">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Productos terminados"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemPb">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Productos base"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemP">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Productos"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCat1">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemBp">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Subproductos"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemSc">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Desechos"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCat2">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemRmi">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Materiales directos insumo"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemRmp">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Materiales directos empaque"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemMi">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Materiales indirectos"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCat3">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatItemMo">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Gastos indirectos"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCat4">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatFamily">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Familias"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatUnit">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Unidades"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatPresent">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Presentaciones"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsCat5">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatBizPartnerCus">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Clientes"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCatBizPartnerSup">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Proveedores"/>
               </Properties>
             </MenuItem>
           </SubComponents>
@@ -148,7 +199,7 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jmiMfgJob">
               <Properties>
-                <Property name="text" type="java.lang.String" value="&#xd3;rdenes producci&#xf3;n"/>
+                <Property name="text" type="java.lang.String" value="&#xd3;rdenes de producci&#xf3;n"/>
               </Properties>
             </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsMfg1">
@@ -163,46 +214,77 @@
                 <Property name="text" type="java.lang.String" value="F&#xf3;rmulas y componentes"/>
               </Properties>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiMfgFormulaByproduct">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="F&#xf3;rmulas y colaterales"/>
+              </Properties>
+            </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsMfg2">
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiMfgDepartment">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiMfgVariable">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Departamentos"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiMfgLinePrep">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="L&#xed;neas preparaci&#xf3;n"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiMfgLinePack">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="L&#xed;neas envasado"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsMfg3">
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiMfgYear">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="A&#xf1;os"/>
-              </Properties>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiMfgYearWeek">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="A&#xf1;os y semanas"/>
+                <Property name="text" type="java.lang.String" value="Variables de producci&#xf3;n"/>
               </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jmQas">
+        <Menu class="javax.swing.JMenu" name="jmQty">
           <Properties>
             <Property name="text" type="java.lang.String" value="Calidad"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiQtyTestApp">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Aplicaciones de pruebas de calidad"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiQtyTestAppResult">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Resultados de aplicaciones de pruebas de calidad"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsQty1">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiQtyTest">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Pruebas de calidad"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiQtyParam">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Par&#xe1;metros de calidad"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jmInv">
           <Properties>
             <Property name="text" type="java.lang.String" value="Inventarios"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiInvWsm">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Documentos de almac&#xe9;n"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiInvWsmRow">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Documentos de almac&#xe9;n a detalle"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jsInv1">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiInvStock">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Existencias"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiInvStockLot">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Existencias por lote"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jmRep">
           <Properties>
@@ -236,7 +318,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
-    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-73,0,0,2,-112"/>
+    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,27,0,0,3,48"/>
     <SyntheticProperty name="formPosition" type="java.awt.Point" value="-84,-19,0,5,115,114,0,14,106,97,118,97,46,97,119,116,46,80,111,105,110,116,-74,-60,-118,114,52,126,-56,38,2,0,2,73,0,1,120,73,0,1,121,120,112,0,0,0,0,0,0,0,0"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="0"/>
     <SyntheticProperty name="generatePosition" type="boolean" value="true"/>
